# jobhunter

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  MIGRATION.md  MIGRATION_DISCOVERY.md  MIGRATION_NOTES.md  OPENCLAW_JOB_SEARCH_SPEC.md  README.md  docker-compose.yml  jobhunter  pyproject.toml  tasks.md
config/: jobbot.json  jobhunter.json  openclaw.example.json5  profile.example.json  scoring.json  sources.json
docker/openclaw-gateway/: Dockerfile
docs/: OPENCLAW_DOCKER_APPROVAL_STEPS.md
docs/openclaw-upstream/: callback-origin-message-id.md
input/: cv.example.md  icp.example.md  profile.example.md  profile.md
jobbot/: __main__.py  agent.py  agent_actions.py  app.py  budget.py  config.py  coordinators.py  database.py  llm.py  logging_setup.py  models.py  scoring.py  sources.py  telegram.py
jobhunter/: __init__.py  __main__.py  agent.py  agent_actions.py  app.py  budget.py  config.py  coordinators.py  database.py  firecrawl.py  llm.py  logging_setup.py  models.py  openclaw_mcp.py  scoring.py  service.py  sources.py  telegram.py
openclaw/: JOB_SEARCH_AGENT_PROMPT.md
openclaw/prompts/: agent.md  discovery.md  tuning.md
openclaw/worker/: Dockerfile  watcher.js
plugins/jobhunter-tools/: index.js  openclaw.plugin.json  package.json
tests/: test_agent.py  test_agent_actions.py  test_app.py  test_behavior.py  test_config.py  test_database.py  test_imap_sources.py  test_launcher.py  test_openclaw_launcher.py  test_openclaw_worker.py  test_scoring.py  test_service.py  test_smoke.py  test_sources.py  test_telegram.py
(+9 files in other folders)
