[project]
name = "jobhunter"
version = "0.1.0"
description = "Safe human-in-the-loop job search bot designed for Docker-isolated OpenClaw workflows."
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
